2014-09-07  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (if): Tweak for more precise error message.

	* syntax.scm: Update for '%syntax-error' -> 'syntax-error' renaming.
	* std_syntax.scm: Likewise.

2014-09-04  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (syntax-error): Rename to ...
	(report-syntax-error): .. because r7rs syntax-error is incompatible.
	* case_syntax.scm: Update.
	* misc_syntax.scm: Update.
	* syntax.scm: Update.
	* std_syntax.scm (free-identifier=?, bound-identifier=?): Update
	and add missing location argument.

2014-08-28  Per Bothner  <per@bothner.com>

	* compile_misc.scm (integerToCharValidateApply): Fix expansion
	to better type-check/type-convert.

2014-08-21  Per Bothner  <per@bothner.com>

	* parameters.scm (parameterize): Move compile-type macro
	to separate module - away from run-time code.
	* parameterize.scm: New file.
	* Makefile.am: Update accoringly.

2014-08-20  Per Bothner  <per@bothner.com>

	* misc.scm: Add dependency on case_syntax.

2014-08-13  Andrea Bernardini <andrebask@gmail.com>

       Define rewriting rules for the new implementation of "case"
       expressions.
       * case_syntax.scm: New file. "case" syntax definition, CaseExps
       construction.
       * Makefile.am: Add case_syntax.scm.
       * Makefile.in: Add case_syntax.scm.
       * std_syntax.scm: Delete "case" macro, new implementation moved
       in case_syntax.scm.

2014-08-14  Per Bothner  <per@bothner.com>

	* strings.scm (string-replace!): New function.
	(string-copy!): Re-implement using string-replace!.  Note that
	while string-copy! is defined to replace a substring with the same
	number of character from the source, because of surrogates the
	target and source segments may be different lengths, so we need
	to use a general replace.  String-replace! does the job.

2014-08-12  Per Bothner  <per@bothner.com>

	* characters.scm (char?): Also check for java.lang.Character.

2014-08-11  Per Bothner  <per@bothner.com>
