@@ -1,0 +1,6 @@
+(module-name (scheme cxr))
+(require kawa.lib.lists)
+(export
+ caaaar caaar caaddr cadaar cadar cadddr cdaaar cdaar cdaddr cddaar
+ cddar cddddr caaadr caadar caadr cadadr caddar caddr cdaadr cdadar
+ cdadr cddadr cdddar cdddr)
